fix alternate row colors in list and menu z-index

--- a/var/www/canopsis/style.css
+++ b/var/www/canopsis/style.css
@@ -628,3 +628,7 @@ table.dataTableConnector {
 .grouped-cell-label {
 	background-color: #CCCCCC;
 }
+
+.left-side {
+	z-index: 1000000;
+}
